# trojan-traffic

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  profile-preview.mjs  render.yaml
apps/web/: .env.example  README.md  package.json
services/vision/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/vision/app/: __init__.py  counter.py  detector.py  main.py  session_worker.py  settings.py  supabase.py  ultralytics_env.py
services/vision/tests/: test_counter.py  test_session_worker.py
supabase/: README.md
supabase/migrations/: 202603040001_initial_schema.sql  202603040002_mvp_logic.sql  202603040003_seed_mvp_data.sql  202603090001_signup_bonus.sql  202603090002_daily_login_claim_window.sql  202603090003_admin_session_management.sql  202603090004_admin_session_returning_fix.sql  202603090005_live_token_balance.sql  202603090006_betting_open_window.sql  202603200001_exact_prediction_mode.sql  202603200002_range_prediction_mode.sql  202603200003_prediction_mode_logic.sql  202603210001_prediction_mode_pricing.sql  202603210002_even_money_over_under.sql  202603220001_betting_region_store.sql  202603220002_public_bettor_profiles.sql  202603230001_allow_multiple_predictions_per_session.sql  202603230002_cancel_open_predictions.sql  202603240001_fix_multi_prediction_resolution.sql  202603250001_hide_cancelled_profile_predictions.sql  202603260001_suggest_anon_display_name.sql  202604130001_update_signup_bonus_to_100.sql  202604130002_update_daily_reward_to_10.sql  202604140001_betting_region_line.sql  (+5 more)
(+17 files in other folders)
