[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trojan-traffic-vision"
version = "0.1.0"
description = "FastAPI service for traffic counting sessions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "numpy>=1.26,<2.0",
  "opencv-python>=4.10,<4.12",
  "pydantic-settings>=2.10.0,<3.0.0",
  "ultralytics>=8.3.0,<9.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.13.0,<1.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
